[package]
name = "interpreter_copy_evm"
version = "0.1.0"
authors = ["shitwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2"
ethereum-types = "0.4"
bit-set = "0.4"
parity-bytes = "0.1"
bytes = "0.4"
lazy_static = "1.0"
